--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script>
-    window.location.replace("http://myaye.top/job");
+    window.location.replace("https://t.me/SFAEarnings");
   </script>
 </head>
 <body>
